<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/menuFragment">

    <fragment
        android:id="@+id/menuFragment"
        android:name="com.example.myapplication.ui.MenuFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_menu">
        <action
            android:id="@+id/action_menuFragment_to_itemDetailFragment"
            app:destination="@id/itemDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/cartFragment"
        android:name="com.example.myapplication.ui.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/shopInfoFragment"
        android:name="com.example.myapplication.ui.ShopInfoFragment"
        android:label="@string/shop_info"
        tools:layout="@layout/fragment_shop_info" />
        
    <fragment
        android:id="@+id/itemDetailFragment"
        android:name="com.example.myapplication.ui.ItemDetailFragment"
        android:label="Item Detail"
        tools:layout="@layout/fragment_item_detail">
        <argument
            android:name="foodItemId"
            app:argType="integer" />
    </fragment>
</navigation>